Actually remove ALL emojis from blog posts (previous attempt failed)
- Manually removed emojis:
- Replaced emoji bullets with regular bullets
- PowerShell regex didn't work due to encoding issues
- Side hustles blog: checking 404 issue next

--- a/app/blog/2025-12-09-beyond-the-buzzwords-your-2025-blueprint-for-architecting-an-unstoppable-career.mdx
+++ b/app/blog/2025-12-09-beyond-the-buzzwords-your-2025-blueprint-for-architecting-an-unstoppable-career.mdx
@@ -145,10 +145,10 @@ Both are good, but which moves you closer to your *current* objective?
 1. **Map Against Your North Star:** When faced with multiple opportunities or tasks, map them against your 'North Star' (Principle 1). Which one has the **highest impact** on your long-term goals?
 
 2. **The 2x2 Matrix:** Use a simple matrix to visualize and prioritize:
-   * High Impact/Low Effort ⭐ *(Do first)*
-   * High Impact/High Effort 💪 *(Schedule properly)*
-   * Low Impact/Low Effort 🔧 *(Quick wins)*
-   * Low Impact/High Effort ❌ *(Avoid)*
+   * **High Impact/Low Effort** *(Do first)*
+   * **High Impact/High Effort** *(Schedule properly)*
+   * **Low Impact/Low Effort** *(Quick wins)*
+   * **Low Impact/High Effort** *(Avoid)*
 
 3. **Practice Saying 'No':** Politely decline commitments that don't align with your priorities or stretch you too thin. Your **'no'** to others is a **'yes'** to your own focus.
 
@@ -219,9 +219,9 @@ The fastest way to grow is to learn from your experiences, both good and bad. In
 
 **A project didn't go as planned?** Conduct a personal 'post-mortem':
 
-1. What worked? ✅
-2. What didn't? ❌
-3. What's one thing you'll change next time? 🔄
+1. **What worked?**
+2. **What didn't?**
+3. **What's one thing you'll change next time?**
 
 Treat every setback as a **new data point** for improvement, not a final judgment.
 
