--- a/app/blog/2025-12-09-the-unseen-pillars-why-hidden-helpers-make-or-break-your-2025-career.mdx
+++ b/app/blog/2025-12-09-the-unseen-pillars-why-hidden-helpers-make-or-break-your-2025-career.mdx
@@ -18,7 +18,7 @@ Think of 'hidden helpers' as the invisible infrastructure that allows everyone, 
 
 For anyone just starting out or cementing their professional path, spotting and understanding 'hidden helpers' is crucial for several reasons:
 
-### 1. The Burnout-Proofing Power-Up 🛡️
+### 1. The Burnout-Proofing Power-Up
 
 Let's be real: **burnout** is a pervasive threat in today's demanding work landscape. 
 
@@ -39,7 +39,7 @@ These can prevent a minor hiccup from spiraling into **total exhaustion**.
 
 Look beyond the foosball table; seek **genuine support systems**.
 
-### 2. Unleashing Peak Performance and Innovation 🚀
+### 2. Unleashing Peak Performance and Innovation
 
 When your basic needs are met, your brain is freed up to do its **best work**. 
 
@@ -60,14 +60,14 @@ A workplace that offers both:
 * Dedicated **'focus pods'** or soundproof booths
 
 ...isn't just being nice; it's **maximizing your unique workflow**, leading to:
-✅ Better designs
-✅ Faster project completion
+* Better designs
+* Faster project completion
 
-### 3. Spotting Green Flags in Organizations (and Avoiding Red Ones) 🚩
+### 3. Spotting Green Flags in Organizations (and Avoiding Red Ones)
 
 As you navigate your career in **2025**, you're not just looking for a job; you're looking for a **professional home** where you can grow. 
 
-**Green Flags ✅:**
+**Green Flags:**
 
 Companies that prioritize 'hidden helpers' are often those with a genuinely:
 * **Inclusive** culture
@@ -89,7 +89,7 @@ Conversely, an environment that ignores these fundamental supports is likely to 
 
 Their answers (and the **confidence** with which they deliver them) will tell you a lot.
 
-### 4. Building Your Future-Proof Career Oasis 🌴
+### 4. Building Your Future-Proof Career Oasis
 
 Even if you don't personally need every 'hidden helper' right now, **advocating for them is an investment** in your future self and your colleagues. 
 
@@ -109,13 +109,13 @@ A company that invests in **accessible technology**:
 
 ...isn't just catering to a niche group; it's signaling a commitment to **broad accessibility** that:
 
-✅ Benefits anyone who might ever need it
-✅ Makes the company more **resilient**
-✅ Drives **innovation** by tapping into a wider talent pool
+* Benefits anyone who might ever need it
+* Makes the company more **resilient**
+* Drives **innovation** by tapping into a wider talent pool
 
 ## Actionable Steps: Be a 'Hidden Helper' Spotter and Advocate
 
-### 1. Become a Cultural Detective 🔍
+### 1. Become a Cultural Detective
 
 When researching companies or attending events, **look for subtle clues:**
 
@@ -123,13 +123,13 @@ When researching companies or attending events, **look for subtle clues:**
 * Are their event spaces clearly marked with **accessibility info**, quiet zones, or dietary options?
 * Do employees talk about **work-life balance** in a genuine way, not just as a buzzword?
 
-### 2. Ask the Right Questions ❓
+### 2. Ask the Right Questions
 
 Beyond salary and responsibilities, inquire about the **practical support systems:**
 
 > *"What's the company's approach to flexible work arrangements? Are there designated quiet areas or spaces for focused work? What resources are available for professional development or personal well-being?"*
 
-### 3. Find Your Tribe 🤝
+### 3. Find Your Tribe
 
 Connect with colleagues or peers who also value inclusive environments. 
 
@@ -137,7 +137,7 @@ Connect with colleagues or peers who also value inclusive environments.
 
 Share observations and discuss what makes an ideal professional setting for everyone.
 
-### 4. Advocate When You Have the Platform 📢
+### 4. Advocate When You Have the Platform
 
 As you gain experience and influence, **use your voice:**
 
@@ -147,7 +147,7 @@ As you gain experience and influence, **use your voice:**
 
 > Even small gestures, like ensuring dietary options are clearly labeled at a team lunch, can make a **huge difference**.
 
-### 5. Cultivate Your Personal Oasis 🧘
+### 5. Cultivate Your Personal Oasis
 
 Identify what **you** need to thrive:
 
@@ -157,15 +157,15 @@ Identify what **you** need to thrive:
 
 Actively build these 'hidden helpers' into your **daily routine** and advocate for the space and time to implement them.
 
-## The Future of Work is Inclusive 🌐
+## The Future of Work is Inclusive
 
 The professional landscape of **2025 and beyond** is rapidly evolving. 
 
 The most successful organizations won't just be those with:
-* The flashiest tech ❌
-* The biggest budgets ❌
+* The flashiest tech
+* The biggest budgets
 
-But those that understand the **profound impact** of supporting their people **holistically** ✅
+But those that understand the **profound impact** of supporting their people **holistically**
 
 ---
 
